# autonomous-hovercraft-simulation

./: .gitignore  A_star.cpp  CMakeLists.txt  README.md  package.xml
launch/: start_final.launch.xml
rsc/sdf/: hover_final.sdf  maze.sdf  maze.xacro
src/: evaluate.cpp  navigate_20200726.cpp  teleop_cpp_ros2.cpp
worlds/: Final_2023.world
